# newsletterr

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE.txt  VERSION  app.py  docker-compose.example.yml  docker-entrypoint.sh  newsletterr.py  newsletterr.spec  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  test_security.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release-binaries.yml  release-to-discord.yml
app/: __init__.py  cache.py  config.py  crypto.py  db.py  demo.py  hooks.py  legacy.py  log.py  net.py  progress.py  render.py  scheduler.py  security.py  settings_store.py  state.py  store.py  theme.py  tokens.py
app/blueprints/: api.py  auth.py  (+7 more)
templates/: _icons.html  about.html  base.html  email_history.html  index.html  login.html  logs.html  public_newsletter.html  public_unsubscribe.html  recently_added.html  schedule_preview.html  schedule_preview.html.backup  scheduling.html  settings.html  setup.html
tests/: conftest.py  test_auth.py  test_cache.py  test_custom_theme.py  test_demo_mode.py  test_filter_inactive.py  test_golden_sends.py  test_history.py  test_jellyfin.py  test_jellywatch.py  test_js_preview_parity.py  test_migrations.py  test_most_watched.py  test_pdf_export.py  test_plex_client_id.py  test_pure.py  test_random_pick.py  test_routes.py  test_scheduler_safety.py  test_settings_store.py  test_snapin_tokens.py  test_ssrf.py  test_structure.py  test_tokens.py
(+116 files in other folders)
